[project]
name = "void"
version = "v1.0.0"
description = "Pure python project template."
requires-python = ">=3.14.0,<3.15.0"
dependencies = [
    "ipython>=9.9.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
log_cli = true
log_cli_format = "%(levelname)s %(asctime)s %(message)s"
norecursedirs = '''
.git
.github
.pytest_cache
.ruff_cache
.venv
.idea
.vscode
.zed
'''

[tool.bandit]
exclude_dirs = []
skips = ["B101", "B308", "B703"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
exclude = []

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "BLE",  # flake8-blind-except
    "A",  # flake8-builtins
    "DJ",  # flake8-django
    "I",  # isort
    "INP",  # flake8-no-pep420
    "RUF"  # Ruff-specific rules
]
exclude = [
    ".git",
    ".idea",
    ".vscode",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
]
ignore = [
    "DJ001", # Null values for model char fields
    "ERA001",  # Disable eradicate (commented code removal)
    # Disable Conflicting lint rules,
    # see https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E501",
    "E111",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "S603",
    # Disable unused `noqa` directive
    "RUF100",
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "N806",  # Variable `CONSTANT_NAME` in function should be lowercase
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "services", "local-folder"]
lines-after-imports = 2

[tool.ruff.lint.isort.sections]
"services" = ["services"]

[tool.ruff.lint.per-file-ignores]
# Ignore "E402", "F403", "F405" (import violations) in __init__.py files.
# Ignore "S" (flake8-bandit) and "N802" (function name should be lowercase) in tests and docs.
# Ignore "RUF" (Ruff-specific rules) and "I" (isort) in migrations.
"__init__.py" = ["E402", "F403", "F405"]
"**/{tests,docs}/*" = ["E402", "F403", "F405", "S", "N802", "N815"]
"**/*test*.py" = ["E402", "F403", "F405", "S", "N802"]
